--- a/Notebooks/PreProcess.ipynb
+++ b/Notebooks/PreProcess.ipynb
@@ -22,12 +22,13 @@
     "from random import randint\n",
     "import numpy as Numpy\n",
     "from numpy import asarray\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import splitfolders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +235,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Train Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Copying files: 10000 files [04:09, 40.15 files/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create split data folder\n",
+    "split_dir = \"../Material-Recognition-Data/split_data/\"\n",
+    "if not os.path.isdir(split_dir):\n",
+    "        os.makedirs(split_dir)\n",
+    "\n",
+    "# split data\n",
+    "splitfolders.ratio(augmented_dir, output=split_dir, seed=1337, ratio=(0.8, 0.1, 0.1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Mask Images"
    ]
   },
@@ -254,6 +285,11 @@
    "outputs": [],
    "source": [
     "def read_mask():\n",
+    "    images = []\n",
+    "    labels = []\n",
+    "    imgLabelList = [[]]\n",
+    "    \n",
+    "\n",
     "    pass "
    ]
   },
@@ -263,8 +299,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mask_img():\n",
-    "    pass "
+    "def mask_img(img):\n",
+    "    blur_img = cv2.GaussianBlur(img, (5, 5), 0)\n",
+    "    hsv_img = cv2.cvtColor(blur_img, cv2.COLOR_BGR2HSV)\n",
+    "    lower_green = (25, 40, 50)\n",
+    "    upper_green = (75, 255, 255)\n",
+    "    mask = cv2.inRange(hsv_img, lower_green, upper_green)\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (11, 11))\n",
+    "    mask = cv2.morphologyEx(mask, cv2.MORPH_CLOSE, kernel)\n",
+    "\n",
+    "    b_mask = mask > 0 \n",
+    "\n",
+    "    processed_img = Numpy.zeros_like(img, Numpy.uint8)\n",
+    "    processed_img[b_mask] = img[b_mask]\n",
+    "\n",
+    "    plt.subplot(2, 3, 1); plt.imshow(img)  # Show the original image\n",
+    "    plt.subplot(2, 3, 2); plt.imshow(blur_img)  # Blur image\n",
+    "    plt.subplot(2, 3, 3); plt.imshow(hsv_img)  # HSV image\n",
+    "    plt.subplot(2, 3, 4); plt.imshow(mask)  # Mask\n",
+    "    plt.subplot(2, 3, 5); plt.imshow(b_mask)  # Boolean mask\n",
+    "    plt.subplot(2, 3, 6); plt.imshow(processed_img)  # Image without background\n",
+    "    \n"
    ]
   },
   {
@@ -273,13 +328,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Train Test Split"
-   ]
   },
   {
    "cell_type": "code",
