update preprocessing notebook

--- a/Notebooks/PreProcess.ipynb
+++ b/Notebooks/PreProcess.ipynb
@@ -28,13 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read folders\n",
     "base_dir = \"../Material-Recognition-Data/image/\"\n",
-    "augmented_dir = \"../Material-Recognition-Data/augmented_images/\""
+    "augmented_dir = \"../Material-Recognition-Data/augmented_images/\"\n",
+    "masked_dir = \"../Material-Recognition-Data/mask/\"\n",
+    "augmented_masked_dir = \"../Material-Recognition-Data/augmented_masked_images/\""
    ]
   },
   {
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,13 +89,44 @@
     "    augmented_img = fill(augmented_img, h, w)\n",
     "    return augmented_img\n",
     "\n",
+    "def crop_square(img):\n",
+    "    # target size is 128 for height, since we are going to crop out the extra width\n",
+    "    target_size = 128\n",
+    "    actual_size = img.shape[0]\n",
+    "    scale_value = target_size/actual_size\n",
     "\n",
-    "def augment_images(images_list, class_name, total_augment):\n",
+    "    # resize image\n",
+    "    resized_img = cv2.resize(img, (0, 0), fx=scale_value, fy=scale_value)\n",
+    "    \n",
+    "    # crop image to square\n",
+    "    center = resized_img.shape\n",
+    "    width = resized_img.shape[1]\n",
+    "    height = resized_img.shape[0]\n",
+    "\n",
+    "    if width > height:\n",
+    "        desired_w = height \n",
+    "        desired_h = height\n",
+    "    else:\n",
+    "        desired_w = width \n",
+    "        desired_h = width\n",
+    "\n",
+    "    x = height/2 - desired_h/2\n",
+    "    y = width/2 - desired_w/2 \n",
+    "    cropped_img = resized_img[int(x):int(x+desired_h), int(y):int(y+desired_w)]\n",
+    "    \n",
+    "    return cropped_img\n",
+    "\n",
+    "\n",
+    "def augment_images(images_list, mask_images_list, class_name, total_augment):\n",
     "    class_dir = augmented_dir + class_name + \"/\"\n",
+    "    class_dir_masked = augmented_masked_dir + class_name + \"/\"\n",
     "    images_per_class = total_augment \n",
     "\n",
     "    if not os.path.isdir(class_dir):\n",
     "        os.makedirs(class_dir)\n",
+    "\n",
+    "    if not os.path.isdir(class_dir_masked):\n",
+    "        os.makedirs(class_dir_masked)\n",
     "\n",
     "    original_count = len(images_list)\n",
     "    no_required_images = images_per_class - original_count\n",
@@ -101,30 +134,37 @@
     "\n",
     "    # augment images\n",
     "    while no_required_images > 0: \n",
-    "        copy_img = images_list[no_required_images % original_count]\n",
+    "        idx = no_required_images % original_count\n",
+    "        copy_img = images_list[idx]\n",
+    "        copy_mask_img = mask_images_list[idx]\n",
+    "\n",
     "        ran_choice = randint(1, 5)\n",
     "\n",
     "        # apply diff transformations based on random selection\n",
     "        if ran_choice == 1:\n",
     "            # rotate counter clockwise\n",
     "            augmented_img = cv2.flip(copy_img, 0)\n",
+    "            augmented_masked_img = cv2.flip(copy_mask_img, 0)\n",
     "        elif ran_choice == 2:\n",
     "            # rotate clockwise\n",
     "            augmented_img = cv2.flip(copy_img, 1)\n",
+    "            augmented_masked_img = cv2.flip(copy_mask_img, 1)\n",
     "        elif ran_choice == 3:\n",
     "            # random zoom on image\n",
     "           augmented_img = zoom(copy_img)\n",
+    "           augmented_masked_img = zoom(copy_mask_img)\n",
     "        elif ran_choice == 4:\n",
     "            # vertical shift image\n",
     "            augmented_img = vertical_shift(copy_img)\n",
+    "            augmented_masked_img = vertical_shift(copy_mask_img)\n",
     "        elif ran_choice == 5:\n",
     "            # horizontal shift image\n",
     "            augmented_img = horizontal_shift(copy_img)\n",
-    "\n",
-    "        # resize image \n",
-    "        resized_img = cv2.resize(augmented_img, (0, 0), fx=0.5, fy=0.5)\n",
+    "            augmented_masked_img = horizontal_shift(copy_mask_img)\n",
+    "       \n",
     "        # append to existing list\n",
-    "        images_list.append(resized_img)\n",
+    "        images_list.append(augmented_img)\n",
+    "        mask_images_list.append(augmented_masked_img)\n",
     "        # minus required images\n",
     "        no_required_images -= 1\n",
     "\n",
@@ -132,6 +172,7 @@
     "    for idx in range(len(images_list)):\n",
     "        curr_img = images_list[idx]\n",
     "\n",
+    "        curr_img = crop_square(curr_img)\n",
     "        # convert BGR format to RGB format\n",
     "        curr_img = cv2.cvtColor(curr_img, cv2.COLOR_BGR2RGB)\n",
     "\n",
@@ -140,7 +181,20 @@
     "        # pad index with 0s \n",
     "        img_idx = f'{idx+1:04}'\n",
     "        img_name = class_name + \"_\" + img_idx + \".png\"\n",
-    "        curr_img.save(class_dir + img_name)\n"
+    "        curr_img.save(class_dir + img_name)\n",
+    "\n",
+    "    for idx in range(len(mask_images_list)):\n",
+    "        curr_img = mask_images_list[idx]\n",
+    "        curr_img = crop_square(curr_img)\n",
+    "        # convert BGR format to RGB format\n",
+    "        curr_img = cv2.cvtColor(curr_img, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        # convert array back to img and save\n",
+    "        curr_img = Image.fromarray(curr_img)\n",
+    "        # pad index with 0s \n",
+    "        img_idx = f'{idx+1:04}'\n",
+    "        img_name = class_name + \"_\" + img_idx + \".png\"\n",
+    "        curr_img.save(class_dir_masked + img_name)\n"
    ]
   },
   {
@@ -152,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -206,27 +260,40 @@
     "image_folders = glob.glob(base_dir + \"*\")\n",
     "image_folders = sorted(image_folders)\n",
     "\n",
+    "masked_folders = glob.glob(masked_dir + \"*\")\n",
+    "masked_folders = sorted(masked_folders)\n",
+    "\n",
     "for folder in range(len(image_folders)):\n",
     "    # get class name\n",
     "    class_name = os.path.basename(image_folders[folder])\n",
     "    # get all paths of images in class\n",
     "    class_path_list = glob.glob(base_dir + class_name + \"/*\")\n",
+    "    masked_class_path_list = glob.glob(masked_dir + class_name + \"/*\")\n",
     "\n",
     "    # get list of images in class \n",
     "    images_list = [] \n",
+    "    mask_images_list = []\n",
     "    for idx in range(len(class_path_list)):\n",
     "        if class_path_list[idx].endswith(\".jpg\"):\n",
     "            curr_img = cv2.imread(class_path_list[idx])\n",
+    "            mask_img = cv2.imread(masked_class_path_list[idx])\n",
+    "\n",
     "            # convert image into numpy array\n",
     "            if type(curr_img).__module__ != \"numpy\":\n",
     "                curr_img = Numpy.asarray(curr_img)\n",
     "\n",
+    "            if type(mask_img).__module__ != \"numpy\":\n",
+    "                mask_img = Numpy.asarray(mask_img)\n",
+    "\n",
+    "            \n",
+    "            \n",
     "            images_list.append(curr_img)\n",
+    "            mask_images_list.append(mask_img)\n",
     "\n",
     "    print(\"Current class that is being processed: \" + class_name)\n",
     "    print(\"Current amount of images in class: \" + str(len(images_list)))\n",
     "    # augment\n",
-    "    augment_images(images_list, class_name, 1000)\n",
+    "    augment_images(images_list, mask_images_list, class_name, 1000)\n",
     "\n",
     "    print(\"-------------------------------------------------------\")"
    ]
@@ -235,113 +302,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train Test Split"
+    "Save only 100 of each category for test set (original has 2.5k each category)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Copying files: 10000 files [04:09, 40.15 files/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# create split data folder\n",
-    "split_dir = \"../Material-Recognition-Data/split_data/\"\n",
-    "if not os.path.isdir(split_dir):\n",
-    "        os.makedirs(split_dir)\n",
-    "\n",
-    "# split data\n",
-    "splitfolders.ratio(augmented_dir, output=split_dir, seed=1337, ratio=(0.8, 0.1, 0.1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Mask Images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "width = 256\n",
-    "height = 192"
+    "test_dir = \"../Material-Recognition-Data/test_set/\"\n",
+    "test_folders = glob.glob(test_dir + \"*\")\n",
+    "test_folders = sorted(test_folders)\n",
+    "\n",
+    "final_test_dir = \"../Material-Recognition-Data/final_test_set/\"\n",
+    "\n",
+    "for folder in range(len(test_folders)):\n",
+    "    class_name = os.path.basename(test_folders[folder])\n",
+    "    class_path_list = glob.glob(test_dir + class_name + \"/*\")\n",
+    "\n",
+    "    class_dir = final_test_dir + class_name + \"/\"\n",
+    "    if not os.path.isdir(class_dir):\n",
+    "        os.makedirs(class_dir)\n",
+    "\n",
+    "    # generate 100 random indexes\n",
+    "    idx_list = random.sample(range(len(class_path_list)), 100)\n",
+    "\n",
+    "    for idx in idx_list:\n",
+    "        # read image\n",
+    "        curr_img = cv2.imread(class_path_list[idx])\n",
+    "        # convert image into numpy array\n",
+    "        if type(curr_img).__module__ != \"numpy\":\n",
+    "            curr_img = Numpy.asarray(curr_img)\n",
+    "\n",
+    "        # target size is 128 for height, since we are going to crop out the extra width\n",
+    "        target_size = 128\n",
+    "        actual_size = curr_img.shape[0]\n",
+    "        scale_value = target_size/actual_size\n",
+    "\n",
+    "        # resize image\n",
+    "        resized_img = cv2.resize(curr_img, (0, 0), fx=scale_value, fy=scale_value)\n",
+    "\n",
+    "        # convert BGR format to RGB format\n",
+    "        curr_img = cv2.cvtColor(resized_img, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        # convert array back to img and save\n",
+    "        curr_img = Image.fromarray(curr_img)\n",
+    "        # pad index with 0s \n",
+    "        img_idx = f'{idx+1:06}'\n",
+    "        img_name = class_name + \"_\" + img_idx + \".png\"\n",
+    "        curr_img.save(class_dir + img_name)\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_mask():\n",
-    "    images = []\n",
-    "    labels = []\n",
-    "    imgLabelList = [[]]\n",
-    "    \n",
-    "\n",
-    "    pass "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mask_img(img):\n",
-    "    blur_img = cv2.GaussianBlur(img, (5, 5), 0)\n",
-    "    hsv_img = cv2.cvtColor(blur_img, cv2.COLOR_BGR2HSV)\n",
-    "    lower_green = (25, 40, 50)\n",
-    "    upper_green = (75, 255, 255)\n",
-    "    mask = cv2.inRange(hsv_img, lower_green, upper_green)\n",
-    "    kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (11, 11))\n",
-    "    mask = cv2.morphologyEx(mask, cv2.MORPH_CLOSE, kernel)\n",
-    "\n",
-    "    b_mask = mask > 0 \n",
-    "\n",
-    "    processed_img = Numpy.zeros_like(img, Numpy.uint8)\n",
-    "    processed_img[b_mask] = img[b_mask]\n",
-    "\n",
-    "    plt.subplot(2, 3, 1); plt.imshow(img)  # Show the original image\n",
-    "    plt.subplot(2, 3, 2); plt.imshow(blur_img)  # Blur image\n",
-    "    plt.subplot(2, 3, 3); plt.imshow(hsv_img)  # HSV image\n",
-    "    plt.subplot(2, 3, 4); plt.imshow(mask)  # Mask\n",
-    "    plt.subplot(2, 3, 5); plt.imshow(b_mask)  # Boolean mask\n",
-    "    plt.subplot(2, 3, 6); plt.imshow(processed_img)  # Image without background\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
